--- a/index.css
+++ b/index.css
@@ -4,45 +4,118 @@
 }
 
 body {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-color: #656565;
 }
 
 .wrapper {
     text-align: center;
-    transform: translateY(50%);
 }
 
 .calculadora {
     margin: 0 auto;
 }
 
+.panel-container{
+    max-height: 100vh;
+}
+
 .panel-container, 
 .row {
     margin: 0 auto;
-    min-width: 250px;
-    max-width: 450px;
+    max-width: 550px;
 }
 
-.panel-container input {
-    border: none;
-    text-align: right;
-    font-size: 200%;
-    padding: 7.5% 10%;
+.panel-container .input-row{
+    background-color: #fff;
+    height: 37.5vh;
+    padding: 0 10%;
     width: 80%;
-    max-width: 500px;
+    text-align: left;
 }
 
+.panel-container .input-row .input-top-text:first-child {
+    padding: 3.5vh 0;
+    width: 50%;
+    color: #0a5;
+    font-weight: 800;
+}
+
+.panel-container .input-row .input-bottom-text:last-child {
+    color: #f00;
+    font-size: 80%;
+    float: right;
+}
+
+.panel-container .input-row input {
+    margin-top: 15vh;
+    font-size: calc(16px + 2vh);
+    text-align: right;
+    width: 100%;
+}
+
+.panel-container .input-row,
+.panel-container .input-row input {
+    border: none;
+    max-width: 100%;
+}
+
+.panel-container .input-row input[type="text"]:disabled{background-color:#fff; color: #333;}
+
+.extra-functions {
+    display: none;
+}
 
 .panel-container .row button {
-    background-color: #454545;
+    background-color: #454f4f;
     color: #eaeaea;
     float: left;
-    font-size: calc(12px + 1vw);
+    font-size: calc(14px + 0.75vw);
     width: 25%;
-    height: calc(60px + 6vh);
+    height: 12.5vh;
     border: none;
+    font-weight: 400;
 }
 
+.parenthesis {
+    width: 12.5% !important;
+}
+
+.panel-container .row button:last-child {
+    color: #0c6;
+}
+
+.panel-container .row button:hover {
+    background-color: #333;
+}
+
+.panel-container .fifth-row button:last-child {
+    background-color: #0c6;
+    color: #eaeaea;
+}
+
+.panel-container .fifth-row button:last-child:hover {
+    background-color: #0a5;
+}
+
+.alert {
+    display: none;
+}
+
+
+button {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+    user-select: none;
+}
+
+/*
+--  OLD BUTTONS STYLE -- 
 .panel-container .row button:last-child {
     background-color: #0c6;
 }
@@ -55,7 +128,5 @@ body {
     background-color: #333;
 }
 
-.parenthesis{
-    width: 12.5% !important;
-}
+*/
 
